--- a/res/menu-v11/download_menu_items.xml
+++ b/res/menu-v11/download_menu_items.xml
@@ -31,11 +31,11 @@
         android:icon="@android:drawable/ic_menu_preferences" 
         android:title="@string/title_preference" />
     
-    <item android:id="@+id/menu_add"
+    <!-- <item android:id="@+id/menu_add"
         android:icon="@android:drawable/ic_menu_add"
         android:title="@string/menu_add"
         android:orderInCategory="0" 
-        android:showAsAction="ifRoom"></item>
+        android:showAsAction="ifRoom"></item> -->
     
     <item android:id="@+id/menu_about"
         android:icon="@android:drawable/ic_menu_info_details"
