--- a/res/menu/download_menu_items.xml
+++ b/res/menu/download_menu_items.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
   xmlns:android="http://schemas.android.com/apk/res/android">
-  	<item android:id="@+id/menu_add"
+  	<!-- <item android:id="@+id/menu_add"
         android:icon="@drawable/ic_menu_add_download"
         android:title="@string/menu_add"
-        android:orderInCategory="0" 
-        android:showAsAction="ifRoom" android:visible="false"></item>
+        android:orderInCategory="1" 
+        android:showAsAction="ifRoom"></item> -->
     
     <item android:menuCategory="system" 
         android:title="@string/menu_clearall" 
