--- a/res/layout/download_list.xml
+++ b/res/layout/download_list.xml
@@ -85,12 +85,36 @@
             android:textSize="14dip" >
         </TextView>
     </LinearLayout>
-
+	<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/upgrade"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/rate_bar"
+        android:gravity="center_vertical"
+	    android:orientation="horizontal" >
+	
+        <ImageView
+	        android:id="@+id/ImageView015"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:src="@drawable/banner_icon"/>
+		<TextView
+		    android:id="@+id/pro_text"
+		    android:layout_width="fill_parent"
+		    android:layout_height="match_parent"
+		    android:layout_gravity="center_vertical"
+		    android:background="@drawable/banner"
+		    android:text="@string/syno_pro_banner_text"
+		    android:textAppearance="?android:attr/textAppearanceMedium" 
+		    android:paddingLeft="5dip" android:paddingRight="5dip"/>
+    
+    </LinearLayout>
     <ListView
         android:id="@id/android:list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_above="@+id/rate_bar"
+        android:layout_above="@+id/upgrade"
         android:layout_below="@+id/dl_bar"
         android:choiceMode="singleChoice"
         android:clickable="true"
