--- a/res/layout/add_dl.xml
+++ b/res/layout/add_dl.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/about_scroll"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_margin="5dip"
+	android:layout_height="fill_parent"
     android:isScrollContainer="true"
     tools:ignore="HardcodedText" >
 
@@ -51,7 +52,7 @@
             android:layout_marginTop="20dip"
             android:text="@string/add_dl_t2"
             android:textAppearance="?android:attr/textAppearanceSmall" />
-        
+       
         <TextView
             android:id="@+id/ad_st2"
             android:layout_width="wrap_content"
@@ -70,19 +71,20 @@
             android:layout_marginTop="20dip"
             android:text="@string/add_dl_t3"
             android:textAppearance="?android:attr/textAppearanceSmall" />
-        
+        
         <ImageView
-		    android:id="@+id/img_dl2"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_marginLeft="40dip"
-		    android:layout_marginRight="40dip"
-		    android:layout_marginTop="20dip"
-		    android:layout_marginBottom="20dip"
-		    android:adjustViewBounds="true"
-		    android:cropToPadding="true"
-		    android:scaleType="fitXY"
-		    android:src="@drawable/screen_add_dl_2" />
+            android:id="@+id/img_dl2"
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dip"
+            android:layout_marginLeft="40dip"
+            android:layout_marginRight="40dip"
+            android:layout_marginTop="20dip"
+            android:adjustViewBounds="true"
+            android:cropToPadding="true"
+            android:scaleType="fitXY"
+            android:src="@drawable/screen_add_dl_2" />
         
         <TextView
             android:id="@+id/ad_st3"
@@ -106,8 +108,9 @@
         <ImageView
 		    android:id="@+id/img_dl3"
 		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_marginLeft="40dip"
+		    android:layout_height="120dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="40dip"
 		    android:layout_marginRight="40dip"
 		    android:layout_marginTop="20dip"
 		    android:layout_marginBottom="20dip"
@@ -138,8 +141,9 @@
         <ImageView
 		    android:id="@+id/img_dl4"
 		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_marginLeft="40dip"
+		    android:layout_height="120dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="40dip"
 		    android:layout_marginRight="40dip"
 		    android:layout_marginTop="20dip"
 		    android:layout_marginBottom="20dip"
@@ -156,11 +160,10 @@
             android:layout_marginTop="20dip"
             android:text="@string/add_dl_t6"
             android:textAppearance="?android:attr/textAppearanceSmall" />
-        
-        <ImageView
+        		<ImageView
             android:id="@+id/img_play"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginBottom="20dip"
             android:layout_marginLeft="40dip"
@@ -168,7 +171,7 @@
             android:layout_marginTop="20dip"
             android:adjustViewBounds="true"
             android:cropToPadding="true"
-            android:scaleType="fitXY"
+            android:scaleType="fitCenter"
             android:src="@drawable/get_it_on_play_logo" />
         
     </LinearLayout>
