--- a/res/layout/add_server.xml
+++ b/res/layout/add_server.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/about_scroll"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_margin="5dip"
+	android:layout_height="fill_parent"
     android:isScrollContainer="true"
     tools:ignore="HardcodedText" >
 
@@ -56,8 +57,9 @@
 		<ImageView
 		    android:id="@+id/img_find"
 		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_marginLeft="40dip"
+		    android:layout_height="120dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="40dip"
 		    android:layout_marginRight="40dip"
 		    android:layout_marginTop="20dip"
 		    android:adjustViewBounds="true"
@@ -88,8 +90,9 @@
         <ImageView
 		    android:id="@+id/img_add"
 		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_marginLeft="40dip"
+		    android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="40dip"
 		    android:layout_marginRight="40dip"
 		    android:layout_marginTop="20dip"
 		    android:layout_marginBottom="20dip"
