--- a/res/layout/download_list.xml
+++ b/res/layout/download_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    tools:ignore="HardcodedText" >
+    tools:ignore="UseCompoundDrawables" >
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
