--- a/res/layout/get_started.xml
+++ b/res/layout/get_started.xml
@@ -3,7 +3,8 @@
 	xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LinearLayout01"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_margin="5dip"
+	android:layout_height="wrap_content"
     android:orientation="vertical" >
 	<ScrollView 
 	    android:id="@+id/about_scroll"
@@ -35,6 +36,15 @@
 	            android:layout_marginTop="20dip"
 	            android:layout_marginLeft="20dip"
 	            android:text="@string/get_started_text"
+	            android:textAppearance="?android:attr/textAppearanceSmall" />
+	        
+	        <TextView
+	            android:id="@+id/gs_text_2"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_marginTop="20dip"
+	            android:layout_marginLeft="20dip"
+	            android:text="@string/get_started_text_2"
 	            android:textAppearance="?android:attr/textAppearanceSmall" />
 	    </LinearLayout>
 	</ScrollView>
