--- a/res/layout/syno_info.xml
+++ b/res/layout/syno_info.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/about_scroll"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_margin="5dip"
+	android:layout_height="fill_parent"
     android:isScrollContainer="true"
     tools:ignore="HardcodedText" >
 
