--- a/res/layout/upgrade_pro.xml
+++ b/res/layout/upgrade_pro.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LinearLayout01"
-    android:layout_width="fill_parent"
+    android:layout_margin="5dip"
+	android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 	<ScrollView 
@@ -14,7 +15,7 @@
 	    tools:ignore="HardcodedText" >
 	
 	    <LinearLayout
-	        android:id="@+id/LinearLayout01"
+	        android:id="@+id/LinearLayout011"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:orientation="vertical" >
@@ -61,8 +62,9 @@
 	        <ImageView
 			    android:id="@+id/img_dl4"
 			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:layout_marginLeft="40dip"
+			    android:layout_height="120dp"
+	            android:layout_gravity="center"
+	            android:layout_marginLeft="40dip"
 			    android:layout_marginRight="40dip"
 			    android:layout_marginTop="20dip"
 			    android:layout_marginBottom="20dip"
@@ -93,8 +95,9 @@
 	        <ImageView
 			    android:id="@+id/img_dl2"
 			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:layout_marginLeft="40dip"
+			    android:layout_height="120dp"
+	            android:layout_gravity="center"
+	            android:layout_marginLeft="40dip"
 			    android:layout_marginRight="40dip"
 			    android:layout_marginTop="20dip"
 			    android:layout_marginBottom="20dip"
@@ -125,8 +128,9 @@
 	        <ImageView
 			    android:id="@+id/img_dl3"
 			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:layout_marginLeft="40dip"
+			    android:layout_height="150dp"
+	            android:layout_gravity="center"
+	            android:layout_marginLeft="40dip"
 			    android:layout_marginRight="40dip"
 			    android:layout_marginTop="20dip"
 			    android:layout_marginBottom="20dip"
@@ -176,8 +180,9 @@
 	        <ImageView
 			    android:id="@+id/img_dl5"
 			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:layout_marginLeft="40dip"
+			    android:layout_height="160dp"
+	            android:layout_gravity="center"
+	            android:layout_marginLeft="40dip"
 			    android:layout_marginRight="40dip"
 			    android:layout_marginTop="20dip"
 			    android:layout_marginBottom="20dip"
@@ -185,7 +190,35 @@
 			    android:cropToPadding="true"
 			    android:scaleType="fitXY"
 			    android:src="@drawable/screen_search_engine_1" />
-	        				<TextView
+	        
+	        <TextView
+	            android:id="@+id/upgradest6"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_marginLeft="10dip"
+	            android:layout_marginTop="20dip"
+	            android:gravity="center_vertical"
+	            android:text="@string/upgrade_st6"
+	            android:textAppearance="?android:attr/textAppearanceMedium" />
+	        
+	        <TextView
+	            android:id="@+id/upgradetext_7"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_marginLeft="20dip"
+	            android:layout_marginTop="20dip"
+	            android:text="@string/upgrade_t7"
+	            android:textAppearance="?android:attr/textAppearanceSmall" />				<TextView
+	            android:id="@+id/upgradest7"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_marginLeft="10dip"
+	            android:layout_marginTop="20dip"
+	            android:gravity="center_vertical"
+	            android:text="@string/upgrade_st7"
+	            android:textAppearance="?android:attr/textAppearanceMedium" />
+	        
+	        <TextView
 	            android:id="@+id/upgradetext_6"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
@@ -196,8 +229,8 @@
 	        
 	        <ImageView
 	            android:id="@+id/img_play"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
+	            android:layout_width="match_parent"
+	            android:layout_height="40dp"
 	            android:layout_gravity="center"
 	            android:layout_marginBottom="20dip"
 	            android:layout_marginLeft="40dip"
@@ -205,7 +238,7 @@
 	            android:layout_marginTop="20dip"
 	            android:adjustViewBounds="true"
 	            android:cropToPadding="true"
-	            android:scaleType="fitXY"
+	            android:scaleType="fitCenter"
 	            android:src="@drawable/get_it_on_play_logo" />
 	        
 	    </LinearLayout>
