--- a/res/layout/actionbar.xml
+++ b/res/layout/actionbar.xml
@@ -15,4 +15,5 @@
   -->
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout style="@style/ActionBarCompat" />
+    <LinearLayout style="@style/ActionModeCompat" />
 </merge>
