--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/ImageView01"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icon_phone" />
+                android:src="@drawable/ic_launcher" />
 
             <LinearLayout
                 android:id="@+id/LinearLayout04"
