--- a/res/menu-xlarge-v11/action_mode_menu.xml
+++ b/res/menu-xlarge-v11/action_mode_menu.xml
@@ -15,7 +15,7 @@
         android:showAsAction="ifRoom|withText"></item>
     
     <item android:id="@+id/menu_pause"
-        android:icon="@drawable/ic_action_pause"
+        android:icon="@drawable/ic_menu_pause"
         android:title="@string/action_pause"
         android:orderInCategory="1" 
         android:showAsAction="ifRoom|withText"></item>
