--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -15,10 +15,12 @@
   -->
 <resources>
     <item type="id" name="actionbar_compat" />
+    <item type="id" name="actionmode_compat" />
     <item type="id" name="actionbar_compat_container" />
     <item type="id" name="actionbar_compat_logo" />
+    <item type="id" name="actionmode_compat_logo" />
     <item type="id" name="actionbar_compat_text" />
-	<item type="id" name="actionbar_compat_secure" />
+	<item type="id" name="actionmode_compat_text" />
 	<item type="id" name="delimiter_h" />
     <item type="id" name="delimiter_v" />
     
