--- a/res/layout/task_template.xml
+++ b/res/layout/task_template.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="0dip"
     android:paddingRight="4dip"
     android:paddingTop="0dip"
-    tools:ignore="HardcodedText" >
+    tools:ignore="UselessParent" >
 
     <LinearLayout
         android:id="@+id/id_parent_view_template"
