--- a/res/layout-v11/notification.xml
+++ b/res/layout-v11/notification.xml
@@ -15,7 +15,7 @@
 		android:layout_marginLeft="10dp"
 		android:layout_marginRight="10dp"
 		android:layout_toRightOf="@id/status_icon"
-		android:gravity="center_vertical">"
+		android:gravity="center_vertical">
 		<TextView android:id="@+id/status_text" 
 		    android:layout_width="fill_parent"
 			android:layout_height="wrap_content" 
