--- a/res/menu-v11/refresh_menu_items.xml
+++ b/res/menu-v11/refresh_menu_items.xml
@@ -20,5 +20,5 @@
         android:icon="@drawable/ic_title_refresh"
         android:title="@string/description_refresh"
         android:orderInCategory="0"
-        android:showAsAction="ifRoom"/>
+        android:showAsAction="always"/>
 </menu>
