--- a/res/layout/details_progress_template2.xml
+++ b/res/layout/details_progress_template2.xml
@@ -37,6 +37,7 @@
         android:ellipsize="marquee"
         android:minWidth="150dip"
         android:singleLine="true"
+        android:textColor="#999"
         android:text="@string/detail_eta" />
 
     <ProgressBar
